# faser-daq

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.faser  README.markdown  README.md  README.mdown  README_FASER.md  README_top.md  mkdocs.yml  requirements.txt  setup.sh  startup.sh
TLBRateControl/: updateTLBConfig.py
configs/: LUT_CombinedRun_Oct16.txt  LUT_CombinedRun_Oct21.txt  RunCosmicsTrkPC1.json  RunCosmicsTrkPC2.json  RunStationCosmicsDaq02.json  RunStationCosmicsDaq02_withMonitoring.json  RunStationCosmicsTrkPC1.json  RunTrackerEmulation_withMonitoring.json  TestEthernetTRB.json  TestTLBDigi.json  TestTLBDigiwithEventMonitor.json  TestTLBDigiwithFileWriter.json  TestTLBReceiver.json  TestTLBTRB.json  TestTLBTRBDigi.json  TestTLBwithMonitoring.json  (+79 more)
scripts/RunService/examples/: CMakeLists.txt  example.py  example.sh  runnumber.cxx
src/: CMakeLists.txt  Test.cpp
src/Commons/: EventFormat.hpp  FaserProcess.hpp  RawExampleFormat.hpp
src/Modules/: CMakeLists.txt  DisruptorFileDataLogger.cpp  EventBuilderFaser.cpp  EventFormat.hpp  EventMonitor.cpp  FrontEndEmulator.cpp  FrontEndReceiver.cpp  HistogramManager.cpp  Monitor.cpp  MonitorBinary.cpp  NewModule.cpp  TLBMonitor.cpp  Test.cpp  TrackerMonitor.cpp  TriggerGenerator.cpp  Udp.hpp
src/Modules/Calibration/: CMakeLists.txt  CalibrationModule.cpp  CalibrationModule.hpp
src/Modules/Digitizer/: CMakeLists.txt  DigitizerModule.cpp  DigitizerModule.hpp
src/Modules/DigitizerMonitor/: CMakeLists.txt  DigitizerMonitorModule.cpp  DigitizerMonitorModule.hpp
src/Modules/DigitizerNoise/: CMakeLists.txt  DigitizerNoiseModule.cpp  DigitizerNoiseModule.hpp
src/Modules/DigitizerNoiseMonitor/: CMakeLists.txt  DigitizerNoiseMonitorModule.cpp  DigitizerNoiseMonitorModule.hpp
src/Modules/DigitizerReceiver/: CMakeLists.txt  DigitizerReceiverModule.cpp  DigitizerReceiverModule.hpp
src/Modules/DigitizerReceiverEmulator/: CMakeLists.txt  DigitizerReceiverEmulatorModule.cpp  DigitizerReceiverEmulatorModule.hpp
src/Modules/EmulatedDataMonitor/: CMakeLists.txt  EmulatedDataMonitorModule.cpp  EmulatedDataMonitorModule.hpp
src/Modules/EmulatorMonitor/: CMakeLists.txt  EmulatorMonitorModule.cpp  EmulatorMonitorModule.hpp
src/Modules/EventBuilderFaser/: CMakeLists.txt  EventBuilderFaserModule.cpp  EventBuilderFaserModule.hpp
src/Modules/EventMonitor/: CMakeLists.txt  EventMonitorModule.cpp  EventMonitorModule.hpp
src/Modules/EventPlayback/: CMakeLists.txt  EventPlaybackModule.cpp  EventPlaybackModule.hpp
src/Modules/FileWriterFaser/: CMakeLists.txt  FileWriterFaserModule.cpp  FileWriterFaserModule.hpp
src/Modules/FrontEndEmulator/: CMakeLists.txt  FrontEndEmulatorModule.cpp  FrontEndEmulatorModule.hpp
src/Modules/FrontEndMonitor/: CMakeLists.txt  FrontEndMonitorModule.cpp  FrontEndMonitorModule.hpp
src/Modules/FrontEndReceiver/: CMakeLists.txt  FrontEndReceiverModule.cpp  FrontEndReceiverModule.hpp
src/Modules/HistogramArchiver/: CMakeLists.txt  HistogramArchiverModule.cpp  HistogramArchiverModule.hpp
src/Modules/IFTMonitor/: CMakeLists.txt  IFTMonitorModule.cpp  IFTMonitorModule.hpp
src/Modules/Monitor/: CMakeLists.txt  MonitorModule.cpp  MonitorModule.hpp
src/Modules/MonitorBase/: CMakeLists.txt  MonitorBaseModule.cpp  MonitorBaseModule.hpp
src/Modules/New/: CMakeLists.txt  NewModule.cpp  NewModule.hpp
src/Modules/ReadoutInterfaceTop/: CMakeLists.txt  ReadoutInterfaceTopModule.cpp  ReadoutInterfaceTopModule.hpp
src/Modules/SCTDataMonitor/: CMakeLists.txt  SCTDataMonitorModule.cpp  SCTDataMonitorModule.hpp
src/Modules/TCalibMonitor/: CMakeLists.txt  TCalibMonitorModule.cpp  TCalibMonitorModule.hpp
src/Modules/TLBMonitor/: CMakeLists.txt  TLBMonitorModule.cpp  TLBMonitorModule.hpp
src/Modules/TRB/: CMakeLists.txt  TRBModule.cpp
src/Modules/TrackStationMonitor/: CMakeLists.txt  TrackStationMonitorModule.cpp  TrackStationMonitorModule.hpp
src/Modules/TrackerCalibration/: CMakeLists.txt  TrackerCalibrationModule.cpp  TrackerCalibrationModule.hpp
src/Modules/TrackerMonitor/: CMakeLists.txt  TrackerMonitorModule.cpp  TrackerMonitorModule.hpp
src/Modules/TrackerReceiver/: CMakeLists.txt  TrackerReceiverModule.cpp  TrackerReceiverModule.hpp
src/Modules/TriggerEventMonitor/: CMakeLists.txt  TriggerEventMonitorModule.cpp  TriggerEventMonitorModule.hpp
src/Modules/TriggerGenerator/: CMakeLists.txt  TriggerGeneratorModule.cpp  TriggerGeneratorModule.hpp
src/Modules/TriggerMonitor/: CMakeLists.txt  TriggerMonitorModule.cpp  TriggerMonitorModule.hpp
src/Modules/TriggerRateMonitor/: CMakeLists.txt  TriggerRateMonitorModule.cpp  TriggerRateMonitorModule.hpp
src/Modules/TriggerReceiver/: CMakeLists.txt  TriggerReceiverModule.cpp  TriggerReceiverModule.hpp
src/Utils/: Histogram.hpp  HistogramManager.cpp  HistogramManager.hpp  Udp.hpp
trackercalibration/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md
trackercalibration/TrackerCalibration/: CalibManager.h  Chip.h  Constants.h  ITest.h  L1DelayScan.h  Logger.h  Mask.h  MaskScan.h  Module.h  NPointGain.h  NoiseOccupancy.h  RunManager.h  StrobeDelay.h  ThresholdScan.h  Timer.h  TriggerBurst.h  Trim.h  TrimScan.h  Utils.h
trackercalibration/analysis/: L1DelayScan-211119-2320.root  ThresholScan-271119-0328-chip32-d129-fp10.root  l1delay.C  thscan.C
trackercalibration/apps/: CMakeLists.txt  decodeCfg.cxx  safePhaseDetection.cxx  tburst.cxx  tcalib.cxx  thscan.cxx  trbfirm.cxx
trackercalibration/config/Plane0/: Module0.json  Module1.json  Module2.json  Module3.json  Module4.json  Module5.json  Module6.json  Module7.json  Plane0.json
trackercalibration/config/Plane1/: Module0.json  Module1.json  Module2.json  Module3.json  Module4.json  Module5.json  Module6.json  Module7.json
trackercalibration/src/: CMakeLists.txt  CalibManager.cxx  Chip.cxx  ITest.cxx  L1DelayScan.cxx  Logger.cxx  Mask.cxx  MaskScan.cxx  Module.cxx  NPointGain.cxx  NoiseOccupancy.cxx  RunManager.cxx  StrobeDelay.cxx  ThresholdScan.cxx  Timer.cxx  TriggerBurst.cxx  Trim.cxx  TrimScan.cxx  Utils.cxx
(+325 files in other folders)
